--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -369,7 +369,7 @@ ENUM_GENRE_MANUAL = Leitfaden
 
 ENUM_GENRE_MANUSCRIPT = Manuskript
 
-ENUM_GENRE_MEETING_ABSTRACT = [NEW] Meeting Abstract
+ENUM_GENRE_MEETING_ABSTRACT = Meeting Abstract
 
 #
 # Jus-specific Source genres
@@ -536,11 +536,11 @@ ENUM_REVIEWMETHOD_PEER = Expertenbegutachtung
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_COMPONENTS = mit Dateien oder ext. Ref.
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = [NEW] mit Datei(en) 
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = mit Datei(en) 
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES_ONLY = nur mit Datei(en) 
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = [NEW] mit ext. Ref.
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = mit ext. Ref.
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS_ONLY = nur mit ext. Ref.
 
@@ -1302,7 +1302,7 @@ ViewItemFull_lblWithdrawn = Verworfen
 
 ViewItemFull_lblnameOfCollection = Name der Collection
 
-ViewItemFull_lblnameOfCreator = [NEW]Besitzer
+ViewItemFull_lblnameOfCreator = Besitzer
 
 #
 #ViewItemLog
@@ -1856,7 +1856,7 @@ adv_search_lblChkGenre_journal = Zeitschrift
 
 adv_search_lblChkGenre_manuscript = Manuskript
 
-adv_search_lblChkGenre_meetingabstract = [NEW] Meeting Abstract
+adv_search_lblChkGenre_meetingabstract = Meeting Abstract
 
 adv_search_lblChkGenre_monogaph = Monografie
 
