--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -356,7 +356,7 @@ ENUM_GENRE_MANUAL = Gu\u00EDa
 
 ENUM_GENRE_MANUSCRIPT = Manuscrito
 
-ENUM_GENRE_MEETING_ABSTRACT = [NEW] Meeting Abstract
+ENUM_GENRE_MEETING_ABSTRACT = Meeting Abstract
 
 ENUM_GENRE_MONOGRAPH = Monograf\u00EDa 
 
@@ -516,11 +516,11 @@ ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_COMPONENTS = con fichero(s)
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = con fichero(s)
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES_ONLY = [NEW] with file(s) only
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES_ONLY = with file(s) only
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = con localizadores 
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS_ONLY = [NEW] with locator(s) only
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS_ONLY = with locator(s) only
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_NO_COMPONENTS = sin fichero (s)
 
@@ -1287,7 +1287,7 @@ ViewItemFull_lblWithdrawn = Retirado
 
 ViewItemFull_lblnameOfCollection = Nombre de la Colecci\u00F3n
 
-ViewItemFull_lblnameOfCreator = [NEW]Owner
+ViewItemFull_lblnameOfCreator = Owner
 
 #
 #ViewItemLog
@@ -1804,7 +1804,7 @@ adv_search_lblChkGenre_journal = Revista
 
 adv_search_lblChkGenre_manuscript = Manuscrito
 
-adv_search_lblChkGenre_meetingabstract = [NEW] Meeting Abstract
+adv_search_lblChkGenre_meetingabstract = Meeting Abstract
 
 adv_search_lblChkGenre_other = Otro
 
