--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -356,7 +356,7 @@ ENUM_GENRE_MANUAL = \u30DE\u30CB\u30E5\u30A2\u30EB
 
 ENUM_GENRE_MANUSCRIPT = \u8349\u7A3F
 
-ENUM_GENRE_MEETING_ABSTRACT = [NEW] Meeting Abstract
+ENUM_GENRE_MEETING_ABSTRACT = Meeting Abstract
 
 ENUM_GENRE_MONOGRAPH = \u30E2\u30CE\u30B0\u30E9\u30D5
 
@@ -518,11 +518,11 @@ ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_COMPONENTS = \u30D5\u30A1\u30A4\u30E
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = \u30D5\u30A1\u30A4\u30EB\u6DFB\u4ED8\u3042\u308A
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES_ONLY = [NEW] with file(s) only
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES_ONLY = with file(s) only
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = \u95A2\u9023URL\u3042\u308A
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS_ONLY = [NEW] with locator(s) only
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS_ONLY = with locator(s) only
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_NO_COMPONENTS = \u30D5\u30A1\u30A4\u30EB\u6DFB\u4ED8\u306A\u3057
 
@@ -1276,7 +1276,7 @@ ViewItemFull_lblWithdrawn = \u53D6\u308A\u4E0B\u3052
 
 ViewItemFull_lblnameOfCollection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u540D
 
-ViewItemFull_lblnameOfCreator = [NEW]Owner
+ViewItemFull_lblnameOfCreator = Owner
 
 #
 #ViewItemLog
@@ -1827,7 +1827,7 @@ adv_search_lblChkGenre_journal = \u8AD6\u6587\u8A8C
 
 adv_search_lblChkGenre_manuscript = \u8349\u7A3F
 
-adv_search_lblChkGenre_meetingabstract = [NEW] Meeting Abstract
+adv_search_lblChkGenre_meetingabstract = Meeting Abstract
 
 adv_search_lblChkGenre_monogaph = \u30E2\u30CE\u30B0\u30E9\u30D5
 
