--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -212,7 +212,7 @@ ENUM_GENRE_JOURNAL = Zeitschrift
 
 ENUM_GENRE_MANUSCRIPT = Manuskript
 
-ENUM_GENRE_MEETING_ABSTRACT = [NEW] Meeting Abstract
+ENUM_GENRE_MEETING_ABSTRACT = Meeting Abstract
 
 ENUM_GENRE_OTHER = Sonstige
 
@@ -1483,7 +1483,7 @@ adv_search_lblChkGenre_journal = Zeitschrift
 
 adv_search_lblChkGenre_manuscript = Manuskript
 
-adv_search_lblChkGenre_meetingabstract = [NEW] Meeting Abstract
+adv_search_lblChkGenre_meetingabstract = Meeting Abstract
 
 adv_search_lblChkGenre_monogaph = Monografie
 
@@ -1823,11 +1823,11 @@ export_lblSimpleExport = Export:
 
 faq = FAQ
 
-import_workspace_delete_items = [NEW] L\u00F6scht alle importierten Publikationen aus diesem Importvorgang sofern sie noch nicht freigegeben wurden. Die Informationen zum Importvorgang bleiben erhalten.
+import_workspace_delete_items = L\u00F6scht alle importierten Publikationen aus diesem Importvorgang sofern sie noch nicht freigegeben wurden. Die Informationen zum Importvorgang bleiben erhalten.
 
-import_workspace_remove_import = [NEW] Entfernt die Informationen zu diesem Importvorgang im Importbereich und im QA Bereich. Importierte Publikationen bleiben erhalten.
+import_workspace_remove_import = Entfernt die Informationen zu diesem Importvorgang im Importbereich und im Filter des QA Bereichs. Die importierten Publikationen bleiben erhalten.
 
-import_workspace_submit_release_items = [NEW] Gibt alle Publikationen dieses Importvorgangs frei. Die Publikationen k\u00F6nnen hinterher nicht mehr gel\u00F6scht werden.
+import_workspace_submit_release_items = Gibt alle Publikationen dieses Importvorgangs frei. Die Publikationen k\u00F6nnen hinterher nicht mehr gel\u00F6scht werden.
 
 #
 # Messages
