--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -368,7 +368,7 @@ ENUM_GENRE_MANUAL = Manual
 
 ENUM_GENRE_MANUSCRIPT = Manuscript
 
-ENUM_GENRE_MEETING_ABSTRACT = [NEW] Meeting Abstract
+ENUM_GENRE_MEETING_ABSTRACT = Meeting Abstract
 
 #
 # Jus-specific Source genres
@@ -535,11 +535,11 @@ ENUM_REVIEWMETHOD_PEER = Peer
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_COMPONENTS = with file(s) or locator(s)
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = [NEW] with file(s)
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = with file(s)
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES_ONLY = with file(s) only
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = [NEW] with locator(s)
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = with locator(s)
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS_ONLY = with locator(s) only
 
@@ -1304,7 +1304,7 @@ ViewItemFull_lblWithdrawn = Discarded
 
 ViewItemFull_lblnameOfCollection = Name of Collection
 
-ViewItemFull_lblnameOfCreator = [NEW]Owner
+ViewItemFull_lblnameOfCreator = Owner
 
 #
 #ViewItemLog
@@ -1855,7 +1855,7 @@ adv_search_lblChkGenre_journal = Journal
 
 adv_search_lblChkGenre_manuscript = Manuscript
 
-adv_search_lblChkGenre_meetingabstract = [NEW] Meeting Abstract
+adv_search_lblChkGenre_meetingabstract = Meeting Abstract
 
 adv_search_lblChkGenre_monogaph = Monograph
 
