--- a/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
@@ -210,7 +210,7 @@ ENUM_GENRE_JOURNAL = Revista
 
 ENUM_GENRE_MANUSCRIPT = Manuscrito
 
-ENUM_GENRE_MEETING_ABSTRACT = [NEW] Meeting Abstract
+ENUM_GENRE_MEETING_ABSTRACT = Meeting Abstract
 
 ENUM_GENRE_OTHER = Otro
 
@@ -1452,7 +1452,7 @@ adv_search_lblChkGenre_journal = Revista
 
 adv_search_lblChkGenre_manuscript = Manuscrito
 
-adv_search_lblChkGenre_meetingabstract = [NEW] Meeting Abstract
+adv_search_lblChkGenre_meetingabstract = Meeting Abstract
 
 adv_search_lblChkGenre_other = Otro
 
@@ -1787,11 +1787,11 @@ export_lblSimpleExport = Exportar:
 
 faq = FAQ
 
-import_workspace_delete_items = [NEW] Deletes all publications of this import as long as there are not already released. The import's information will be preserved.
+import_workspace_delete_items = Deletes all publications of this import as long as they have not been released previously. The import's information will be preserved.
 
-import_workspace_remove_import = [NEW] Removes information regarding this import in the import workspace and in the QA workspace. Imported publications will be preserved.
+import_workspace_remove_import = Removes information regarding this import in the import workspace and in the filter of the QA workspace. The imported publications will be preserved.
 
-import_workspace_submit_release_items = [NEW] Releases all publications of this import. These publications cannot be deleted afterwards.
+import_workspace_submit_release_items = Releases all publications of this import. These publications cannot be deleted afterwards.
 
 #
 # Messages
