spelling of label for main- and option-menu corrected
Former-commit-id: 0575b66a529ccf608c0e6828d204debb8bd17745

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -587,7 +587,7 @@ EasySubmission = Einfache Eingabe
 
 EasySubmissionPage = Einfache Eingabe
 
-EasySubmission_lblFetchMetadata = Import
+EasySubmission_lblFetchMetadata = IMPORT
 
 EasySubmission_lblImportMetadata = Import
 
@@ -2600,15 +2600,15 @@ submission_lblMoreDetails = (mehr)
 
 submission_lblSubmissionStart = Eingabemethode
 
-submission_lnkEasySubmission = Einfach
+submission_lnkEasySubmission = EINFACH
 
 submission_lnkImport = Importieren
 
 submission_lnkImportWorkspace = Import Bereich
 
-submission_lnkMultipleImport = Massenimport
+submission_lnkMultipleImport = MASSENIMPORT
 
-submission_lnkNewSubmission = Detailliert
+submission_lnkNewSubmission = DETAILLIERT
 
 test = =
 
