--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -586,7 +586,7 @@ EasySubmission = Easy Submission
 
 EasySubmissionPage = Easy Submission
 
-EasySubmission_lblFetchMetadata = Import
+EasySubmission_lblFetchMetadata = IMPORT
 
 EasySubmission_lblImportMetadata = Import
 
@@ -2419,7 +2419,7 @@ mainMenu_lnkBrowseByAffiliation = Organizations
 
 mainMenu_lnkDepositor = MY ITEMS
 
-mainMenu_lnkEasySubmission = Easy
+mainMenu_lnkEasySubmission = EASY
 
 mainMenu_lnkHelp = Help
 
@@ -2602,15 +2602,15 @@ submission_lblMoreDetails = (more)
 
 submission_lblSubmissionStart = Submission Method
 
-submission_lnkEasySubmission = Easy
+submission_lnkEasySubmission = EASY
 
 submission_lnkImport = Import
 
 submission_lnkImportWorkspace = Import Workspace
 
-submission_lnkMultipleImport = Multiple Import
+submission_lnkMultipleImport = MULTIPLE IMPORT
 
-submission_lnkNewSubmission = Full
+submission_lnkNewSubmission = FULL
 
 #
 # Title
