GUI working - label spelling for Import changed from Uppercase to capitalized - empty space between label and selectbox deleted (PersOrgGroup.jspf)
Former-commit-id: 882fa664d28e776c68a437211a548c498d3b4baf

--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -586,7 +586,7 @@ EasySubmission = Easy Submission
 
 EasySubmissionPage = Easy Submission
 
-EasySubmission_lblFetchMetadata = IMPORT
+EasySubmission_lblFetchMetadata = Import
 
 EasySubmission_lblImportMetadata = Import
 
