--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -30,7 +30,6 @@ AcceptItemPage = Datensatz akzeptieren
 
 AcceptItem_lblAudienceNoticeAccept = Sie k\u00F6nnen die Nutzergruppen f\u00FCr den Zugriff auf die Volltexte im n\u00E4chsten Schritt unter dem Tab "Sharing" ausw\u00E4hlen.
 
-#
 # Accept
 #
 AcceptItem_lblComment = Kommentar zum Akzeptieren
@@ -587,7 +586,7 @@ EasySubmission = Einfache Eingabe
 
 EasySubmissionPage = Einfache Eingabe
 
-EasySubmission_lblFetchMetadata = IMPORT
+EasySubmission_lblFetchMetadata = Import
 
 EasySubmission_lblImportMetadata = Import
 
