add translation Japanese labels
Former-commit-id: b6e140145b90c8fec405f3d139b0763421110ba2

--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -617,9 +617,9 @@ localeJA = \u65E5\u672C\u8A9E
 
 mandatoryField = \u5FC5\u9808\u9805\u76EE
 
-mandatoryFieldFS1 = Check 
+mandatoryFieldFS1 = \u30c1\u30a7\u30c3\u30af:
 
-mandatoryFieldFS2 = for additional mandatory fields
+mandatoryFieldFS2 = \u8ffd\u52a0\u5fc5\u9808\u9805\u76ee
 
 multipleImport_description = multipleImport_description
 
