--- a/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
@@ -2031,7 +2031,7 @@ submission_lnkImport = \u30A4\u30F3\u30DD\u30FC\u30C8
 
 submission_lnkImportWorkspace = Import Workspace
 
-submission_lnkMultipleImport = Import multiple items
+submission_lnkMultipleImport = \u8907\u6570\u30a2\u30a4\u30c6\u30e0\u3092\u30a4\u30f3\u30dd\u30fc\u30c8
 
 submission_lnkNewSubmission = \u8A73\u7D30\u767B\u9332
 
