--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -922,6 +922,8 @@ List_lkPrevious = \u524D\u3078
 
 List_lkShow = \u8868\u793A
 
+List_lkToggleAll = \ufffd\ufffd\ufffd\ufffd\u5fa1\ufffd
+
 LocalTagsPage = \u30BF\u30B0\u7DE8\u96C6
 
 LoginErrorPage = \u30ED\u30B0\u30A4\u30F3\u72B6\u614B
@@ -938,7 +940,7 @@ NoSearchResultsPage = \u691C\u7D22\u7D50\u679C0\u4EF6
 
 Pubman_browserTitle = PubMan
 
-Pubman_descriptionMetaTag = PubMan - an eSciDoc solution for publication data management
+Pubman_descriptionMetaTag = PubMan - eSciDoc\ufffd\ufffd\ufffd\u818a\u221e\ufffd\ufffd\u7d14\ufffd\ufffd\u30e3\ufffd\ufffd\u6fc0\ufffd\ufffd\ufffd
 
 #
 # Quality Assurance / Moderator Workspace
@@ -1179,7 +1181,7 @@ ViewItemFull_lblNoEntry = -
 
 ViewItemFull_lblPages = \u30DA\u30FC\u30B8
 
-ViewItemFull_lblPdfWarning = It could be problematic to display large PDF files directly within the browser. In case of errors please choose the 'Download' option!
+ViewItemFull_lblPdfWarning = PDF\ufffd\ufffd\ufffd\ufffd\u3083\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\u541f\ufffd\u8335\ufffd\u305a\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\u82e5\ufffd\ufffd\ufffd\ufffd\ufffd\u7feb\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\u82e5\ufffd\ufffd\u51b4\ufffd\ufffd\u7feb\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\u5fa1\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd
 
 ViewItemFull_lblPublishingInfo = \u51FA\u7248\u60C5\u5831
 
@@ -1195,7 +1197,7 @@ ViewItemFull_lblRollback = \u3053\u306E\u7248\u306B\u623B\u3059
 
 ViewItemFull_lblRollbackConfirm = \u73FE\u5728\u306E\u6700\u65B0\u30C7\u30FC\u30BF\u3092\u3053\u306E\u7248\u306E\u60C5\u5831\u3067\u7F6E\u304D\u63DB\u3048\u3066\u826F\u3044\u3067\u3059\u304B?
 
-ViewItemFull_lblSaveFulltext = Download
+ViewItemFull_lblSaveFulltext = \u7bc6\ufffd\ufffd
 
 ViewItemFull_lblShowGroup = \u8868\u793A:
 
@@ -1264,7 +1266,7 @@ ViewItemFull_lblTitle = \u30BF\u30A4\u30C8\u30EB
 
 ViewItemFull_lblVersion = \u30D0\u30FC\u30B8\u30E7\u30F3
 
-ViewItemFull_lblViewFulltext = View
+ViewItemFull_lblViewFulltext = \u8335\ufffd\u305a
 
 ViewItemFull_lblVisibility = \ 
 
@@ -1276,7 +1278,7 @@ ViewItemFull_lblWithdrawn = \u53D6\u308A\u4E0B\u3052
 
 ViewItemFull_lblnameOfCollection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u540D
 
-ViewItemFull_lblnameOfCreator = Owner
+ViewItemFull_lblnameOfCreator = \ufffd\u8102\ufffd\ufffd\ufffd
 
 #
 #ViewItemLog
@@ -1827,7 +1829,7 @@ adv_search_lblChkGenre_journal = \u8AD6\u6587\u8A8C
 
 adv_search_lblChkGenre_manuscript = \u8349\u7A3F
 
-adv_search_lblChkGenre_meetingabstract = Meeting Abstract
+adv_search_lblChkGenre_meetingabstract = \u7bcc\ufffd\ufffd\ufffd\ufffd\ufffd
 
 adv_search_lblChkGenre_monogaph = \u30E2\u30CE\u30B0\u30E9\u30D5
 
