--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -922,7 +922,7 @@ List_lkPrevious = \u524D\u3078
 
 List_lkShow = \u8868\u793A
 
-List_lkToggleAll = 全てを選択
+List_lkToggleAll = \u5168\u3066\u3092\u9078\u629e
 
 LocalTagsPage = \u30BF\u30B0\u7DE8\u96C6
 
@@ -940,7 +940,7 @@ NoSearchResultsPage = \u691C\u7D22\u7D50\u679C0\u4EF6
 
 Pubman_browserTitle = PubMan
 
-Pubman_descriptionMetaTag = PubMan - eSciDoc文献管理ソリューション
+Pubman_descriptionMetaTag = PubMan - eSciDoc\u6587\u732e\u7ba1\u7406\u30bd\u30ea\u30e5\u30fc\u30b7\u30e7\u30f3
 
 #
 # Quality Assurance / Moderator Workspace
@@ -1181,7 +1181,7 @@ ViewItemFull_lblNoEntry = -
 
 ViewItemFull_lblPages = \u30DA\u30FC\u30B8
 
-ViewItemFull_lblPdfWarning = ファイルサイズの大きなPDFファイルをブラウザ内で開いた際にエラーになる場合があります。エラーで開けない場合は「ダウンロード」リンクを選択してください。
+ViewItemFull_lblPdfWarning = \u30d5\u30a1\u30a4\u30eb\u30b5\u30a4\u30ba\u306e\u5927\u304d\u306aPDF\u30d5\u30a1\u30a4\u30eb\u3092\u30d6\u30e9\u30a6\u30b6\u5185\u3067\u958b\u3044\u305f\u969b\u306b\u30a8\u30e9\u30fc\u306b\u306a\u308b\u5834\u5408\u304c\u3042\u308a\u307e\u3059\u3002\u30a8\u30e9\u30fc\u3067\u958b\u3051\u306a\u3044\u5834\u5408\u306f\u300c\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u300d\u30ea\u30f3\u30af\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 
 ViewItemFull_lblPublishingInfo = \u51FA\u7248\u60C5\u5831
 
@@ -1197,7 +1197,7 @@ ViewItemFull_lblRollback = \u3053\u306E\u7248\u306B\u623B\u3059
 
 ViewItemFull_lblRollbackConfirm = \u73FE\u5728\u306E\u6700\u65B0\u30C7\u30FC\u30BF\u3092\u3053\u306E\u7248\u306E\u60C5\u5831\u3067\u7F6E\u304D\u63DB\u3048\u3066\u826F\u3044\u3067\u3059\u304B?
 
-ViewItemFull_lblSaveFulltext = 保存
+ViewItemFull_lblSaveFulltext = \u4fdd\u5b58
 
 ViewItemFull_lblShowGroup = \u8868\u793A:
 
@@ -1266,7 +1266,7 @@ ViewItemFull_lblTitle = \u30BF\u30A4\u30C8\u30EB
 
 ViewItemFull_lblVersion = \u30D0\u30FC\u30B8\u30E7\u30F3
 
-ViewItemFull_lblViewFulltext = 表示
+ViewItemFull_lblViewFulltext = \u8868\u793a
 
 ViewItemFull_lblVisibility = \ 
 
@@ -1278,7 +1278,7 @@ ViewItemFull_lblWithdrawn = \u53D6\u308A\u4E0B\u3052
 
 ViewItemFull_lblnameOfCollection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u540D
 
-ViewItemFull_lblnameOfCreator = 登録者
+ViewItemFull_lblnameOfCreator = \u767b\u9332\u8005
 
 #
 #ViewItemLog
@@ -1829,7 +1829,7 @@ adv_search_lblChkGenre_journal = \u8AD6\u6587\u8A8C
 
 adv_search_lblChkGenre_manuscript = \u8349\u7A3F
 
-adv_search_lblChkGenre_meetingabstract = 会議抄録
+adv_search_lblChkGenre_meetingabstract = \u4f1a\u8b70\u6284\u9332
 
 adv_search_lblChkGenre_monogaph = \u30E2\u30CE\u30B0\u30E9\u30D5
 
