Add several missing Japanse translation.
Former-commit-id: 5e6567ed44794ca8dba22c984e11bad34ba4781e

--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -280,7 +280,7 @@ ENUM_CRITERIA_OWNER = \u767B\u9332\u8005\u540D
 
 ENUM_CRITERIA_PUBLISHING_INFO = \u51FA\u7248\u60C5\u5831
 
-ENUM_CRITERIA_RELEVANCE = \u30b9\u30b3\u30a2\u9806
+ENUM_CRITERIA_RELEVANCE = \u30B9\u30B3\u30A2\u9806
 
 ENUM_CRITERIA_REVIEW_METHOD = \u67FB\u8AAD\u7A2E\u5225
 
@@ -356,7 +356,7 @@ ENUM_GENRE_MANUAL = \u30DE\u30CB\u30E5\u30A2\u30EB
 
 ENUM_GENRE_MANUSCRIPT = \u8349\u7A3F
 
-ENUM_GENRE_MEETING_ABSTRACT = \u4f1a\u8b70\u6284\u9332
+ENUM_GENRE_MEETING_ABSTRACT = \u4F1A\u8B70\u6284\u9332
 
 ENUM_GENRE_MONOGRAPH = \u30E2\u30CE\u30B0\u30E9\u30D5
 
@@ -518,11 +518,11 @@ ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_COMPONENTS = \u30D5\u30A1\u30A4\u30E
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = \u30D5\u30A1\u30A4\u30EB\u6DFB\u4ED8\u3042\u308A
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES_ONLY = \u30d5\u30a1\u30a4\u30eb\u6dfb\u4ed8\u3042\u308b\u3082\u306e\u306b\u9650\u5b9a
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES_ONLY = \u30D5\u30A1\u30A4\u30EB\u6DFB\u4ED8\u3042\u308B\u3082\u306E\u306B\u9650\u5B9A
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = \u95A2\u9023URL\u3042\u308A
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS_ONLY = \u95a2\u9023URL\u4ed8\u304d\u306e\u3082\u306e\u306b\u9650\u5b9a
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS_ONLY = \u95A2\u9023URL\u4ED8\u304D\u306E\u3082\u306E\u306B\u9650\u5B9A
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_NO_COMPONENTS = \u30D5\u30A1\u30A4\u30EB\u6DFB\u4ED8\u306A\u3057
 
@@ -922,7 +922,7 @@ List_lkPrevious = \u524D\u3078
 
 List_lkShow = \u8868\u793A
 
-List_lkToggleAll = \u5168\u3066\u3092\u9078\u629e
+List_lkToggleAll = \u5168\u3066\u3092\u9078\u629E
 
 LocalTagsPage = \u30BF\u30B0\u7DE8\u96C6
 
@@ -930,7 +930,7 @@ LoginErrorPage = \u30ED\u30B0\u30A4\u30F3\u72B6\u614B
 
 MultipleImportForm = \u4E00\u62EC\u767B\u9332\u6761\u4EF6\u306E\u6307\u5B9A
 
-MultipleImport_configuration = \u30a4\u30f3\u30dd\u30fc\u30c8\u8a2d\u5b9a
+MultipleImport_configuration = \u30A4\u30F3\u30DD\u30FC\u30C8\u8A2D\u5B9A
 
 NewMultipleImport = \u4E00\u62EC\u767B\u9332
 
@@ -940,7 +940,7 @@ NoSearchResultsPage = \u691C\u7D22\u7D50\u679C0\u4EF6
 
 Pubman_browserTitle = PubMan
 
-Pubman_descriptionMetaTag = PubMan - eSciDoc\u6587\u732e\u7ba1\u7406\u30bd\u30ea\u30e5\u30fc\u30b7\u30e7\u30f3
+Pubman_descriptionMetaTag = PubMan - eSciDoc\u6587\u732E\u7BA1\u7406\u30BD\u30EA\u30E5\u30FC\u30B7\u30E7\u30F3
 
 #
 # Quality Assurance / Moderator Workspace
@@ -1153,7 +1153,7 @@ ViewItemFull_lblLanguages = \u8A00\u8A9E
 
 ViewItemFull_lblLastModified = \u6700\u7D42\u66F4\u65B0
 
-ViewItemFull_lblLatestVersion = Latest Version
+ViewItemFull_lblLatestVersion = \uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
 
 ViewItemFull_lblLegalCaseCourtName = \u88C1\u5224\u6240\u540D
 
@@ -1181,7 +1181,7 @@ ViewItemFull_lblNoEntry = -
 
 ViewItemFull_lblPages = \u30DA\u30FC\u30B8
 
-ViewItemFull_lblPdfWarning = \u30d5\u30a1\u30a4\u30eb\u30b5\u30a4\u30ba\u306e\u5927\u304d\u306aPDF\u30d5\u30a1\u30a4\u30eb\u3092\u30d6\u30e9\u30a6\u30b6\u5185\u3067\u958b\u3044\u305f\u969b\u306b\u30a8\u30e9\u30fc\u306b\u306a\u308b\u5834\u5408\u304c\u3042\u308a\u307e\u3059\u3002\u30a8\u30e9\u30fc\u3067\u958b\u3051\u306a\u3044\u5834\u5408\u306f\u300c\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u300d\u30ea\u30f3\u30af\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+ViewItemFull_lblPdfWarning = \u30D5\u30A1\u30A4\u30EB\u30B5\u30A4\u30BA\u306E\u5927\u304D\u306APDF\u30D5\u30A1\u30A4\u30EB\u3092\u30D6\u30E9\u30A6\u30B6\u5185\u3067\u958B\u3044\u305F\u969B\u306B\u30A8\u30E9\u30FC\u306B\u306A\u308B\u5834\u5408\u304C\u3042\u308A\u307E\u3059\u3002\u30A8\u30E9\u30FC\u3067\u958B\u3051\u306A\u3044\u5834\u5408\u306F\u300C\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u300D\u30EA\u30F3\u30AF\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
 ViewItemFull_lblPublishingInfo = \u51FA\u7248\u60C5\u5831
 
@@ -1197,7 +1197,7 @@ ViewItemFull_lblRollback = \u3053\u306E\u7248\u306B\u623B\u3059
 
 ViewItemFull_lblRollbackConfirm = \u73FE\u5728\u306E\u6700\u65B0\u30C7\u30FC\u30BF\u3092\u3053\u306E\u7248\u306E\u60C5\u5831\u3067\u7F6E\u304D\u63DB\u3048\u3066\u826F\u3044\u3067\u3059\u304B?
 
-ViewItemFull_lblSaveFulltext = \u4fdd\u5b58
+ViewItemFull_lblSaveFulltext = \u4FDD\u5B58
 
 ViewItemFull_lblShowGroup = \u8868\u793A:
 
@@ -1207,7 +1207,7 @@ ViewItemFull_lblSocialBookmarking_CiteULike = \u3000\u3053\u306E\u30A2\u30A4\u30
 
 ViewItemFull_lblSocialBookmarking_Connotea = \u3053\u306E\u30A2\u30A4\u30C6\u30E0\u3092Connotea\u306B\u8FFD\u52A0\u3059\u308B
 
-ViewItemFull_lblSocialBookmarking_Delicious = \u3053\u306E\u30A2\u30A4\u30C6\u30E0\u3092Delicious\u306B\u30D6\u30C3\u30AF\u30DE\u30FC\u30AF\u3059\u308B
+ViewItemFull_lblSocialBookmarking_Delicious = \u3053\u306E\u30A2\u30A4\u30C6\u30E0\u3092DElicious\u306B\u30D6\u30C3\u30AF\u30DE\u30FC\u30AF\u3059\u308B
 
 ViewItemFull_lblSourceAffiliations = \u6240\u5C5E
 
@@ -1266,7 +1266,7 @@ ViewItemFull_lblTitle = \u30BF\u30A4\u30C8\u30EB
 
 ViewItemFull_lblVersion = \u30D0\u30FC\u30B8\u30E7\u30F3
 
-ViewItemFull_lblViewFulltext = \u8868\u793a
+ViewItemFull_lblViewFulltext = \u8868\u793A
 
 ViewItemFull_lblVisibility = \ 
 
@@ -1278,7 +1278,7 @@ ViewItemFull_lblWithdrawn = \u53D6\u308A\u4E0B\u3052
 
 ViewItemFull_lblnameOfCollection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u540D
 
-ViewItemFull_lblnameOfCreator = \u767b\u9332\u8005
+ViewItemFull_lblnameOfCreator = \u767B\u9332\u8005
 
 #
 #ViewItemLog
@@ -1829,7 +1829,7 @@ adv_search_lblChkGenre_journal = \u8AD6\u6587\u8A8C
 
 adv_search_lblChkGenre_manuscript = \u8349\u7A3F
 
-adv_search_lblChkGenre_meetingabstract = \u4f1a\u8b70\u6284\u9332
+adv_search_lblChkGenre_meetingabstract = \u4F1A\u8B70\u6284\u9332
 
 adv_search_lblChkGenre_monogaph = \u30E2\u30CE\u30B0\u30E9\u30D5
 
@@ -1865,9 +1865,9 @@ adv_search_lblChkType_accepted = \u53D7\u7406\u65E5
 
 adv_search_lblChkType_created = \u539F\u7A3F\u4F5C\u6210\u65E5
 
-adv_search_lblChkType_event_end_date = end of event
+adv_search_lblChkType_event_end_date = \u30A4\u30D9\u30F3\u30C8\u7D42\u4E86\u65E5
 
-adv_search_lblChkType_event_start_date = start of event
+adv_search_lblChkType_event_start_date = \u30A4\u30D9\u30F3\u30C8\u958B\u59CB\u65E5
 
 adv_search_lblChkType_modified = \u6539\u8A02\u65E5
 
@@ -1952,7 +1952,7 @@ all = \u5168\u3066\u3092\u9078\u629E
 
 cancel = \u30AD\u30E3\u30F3\u30BB\u30EB
 
-chooseWorkspace_descImportWorkspace = Description Import Workspace Japanese.
+chooseWorkspace_descImportWorkspace = Description Import Workspace.
 
 chooseWorkspace_descQAWorkspace = Description QA Workspace Japanese.
 
@@ -2286,7 +2286,7 @@ info_lblMessageHeader = \u30B7\u30B9\u30C6\u30E0\u30E1\u30C3\u30BB\u30FC\u30B8:
 
 informative_message = \u60C5\u5831:
 
-iso6393Desc = \u8a00\u8a9e\u30b3\u30fc\u30c9
+iso6393Desc = \u8A00\u8A9E\u30B3\u30FC\u30C9
 
 item_abstract = \u8981\u65E8
 
