--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -302,7 +302,7 @@ basket_SingleAlreadyInBasket = \u3053\u306E\u30A2\u30A4\u30C6\u30E0\u306F\u3059\
 
 basket_SingleRemovedSuccessfully = The item was removed from the basket.
 
-chooseWorkspace = Please choose a workspace to edit the items.
+chooseWorkspace = \u30a2\u30a4\u30c6\u30e0\u7ba1\u7406\u753b\u9762\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 
 copyright = \u00A9 2007 Max Planck Society
 
