Multiple import select box
Former-commit-id: 7c975a2a862229f2cd92fcbc906b1bd74ba5ae54

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -13,7 +13,7 @@
 # and limitations under the License.
 #
 # When distributing Covered Code, include this CDDL HEADER in each
-# file and include the License file at license/ESCIDOC.LICENSE.
+# file and include the License file at license/ESCIDOC.LIC1ENSE.
 # If applicable, add the following below this CDDL HEADER, with the
 # fields enclosed by brackets "[]" replaced with your own identifying
 # information: Portions Copyright [yyyy] [name of copyright owner]
@@ -1309,6 +1309,8 @@ ViewItemFull_lblnameOfCreator = Besitzer
 ViewItemLogPage = Bearbeitungsgeschichte
 
 ViewItemLog_Header = Bearbeitungsgeschichte
+
+ViewItemLog_lblAssignVersionPid = [NEW] Versions-PID zugewiesen am
 
 ViewItemLog_lblComment = Beschreibung:
 
