--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1313,6 +1313,8 @@ ViewItemLogPage = Log
 
 ViewItemLog_Header = Log 
 
+ViewItemLog_lblAssignVersionPid = [NEW] Version PID assigned on
+
 ViewItemLog_lblComment = Description:
 
 ViewItemLog_lblCreate = Created on
