--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -1296,6 +1296,8 @@ ViewItemLogPage = Log de Item
 
 ViewItemLog_Header = Log de Item 
 
+ViewItemLog_lblAssignVersionPid = [NEW] Version PID assigned on
+
 ViewItemLog_lblComment = Descripci\u00F3n :
 
 ViewItemLog_lblCreate = Creado en 
