--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1287,6 +1287,8 @@ ViewItemLogPage = \u5C65\u6B74\u60C5\u5831\u3092\u8868\u793A
 
 ViewItemLog_Header = \u30A2\u30A4\u30C6\u30E0\u30ED\u30B0 
 
+ViewItemLog_lblAssignVersionPid = [NEW] Version PID assigned on
+
 ViewItemLog_lblComment = \u8AAC\u660E:
 
 ViewItemLog_lblCreate = \u4F5C\u6210\u65E5
