GUI work - workspace description added
Former-commit-id: 1f5fecf3de7e0d33f0ef094e7c17a4890b4ac060

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1980,15 +1980,15 @@ all = alle auw\u00E4hlen
 
 cancel = Abbrechen
 
-chooseWorkspace_descImportWorkspace = Beschreibung Import Bereich Deutsch.
+chooseWorkspace_descImportWorkspace = Hier gelangen Sie zu einer Liste Ihrer get\u00E4tigten Massenimporte, die Sie im Detail pr\u00FCfen und verwalten k\u00F6nnen. Die Datens\u00E4tze k\u00F6nnen f\u00FCr jeden Import blockweise freigegeben oder gel\u00F6scht werden.
 
-chooseWorkspace_descQAWorkspace = Beschreibung QA Bereich Deutsch.
+chooseWorkspace_descQAWorkspace = Moderatoren k\u00F6nnen hier alle Publikationen ihres Instituts sichten und bearbeiten. Es ist m\u00F6glich, die Datens\u00E4tze selbst zu bearbeiten, dem jeweiligen Inhaber zur \u00DCberarbeitung zur\u00FCckzuschicken, oder freizugeben. Publikationen im Status \u0022schwebend\u0022, und \u0022verworfen\u0022 werden hier nicht angezeigt.
 
-chooseWorkspace_descReportWorkspace = Beschreibung  Report Bereich Deutsch.
+chooseWorkspace_descReportWorkspace = Mit Hilfe dieser Maske k\u00F6nnen T\u00E4tigkeitsberichte \u00FCber Jahreszeitr\u00E4ume erstellt und exportiert werden. Als Formate stehen HTML und InDesign XML zur Verf\u00FCgung.
 
-chooseWorkspace_descYearbookModeratorWorkspace = Beschreibung Jahrbuch Moderator Bereich Deutsch.
+chooseWorkspace_descYearbookModeratorWorkspace = Erstellen und bearbeiten Sie das MPG-Jahrbuch f\u00FCr Ihr Institut. Eine Liste mit m\u00F6glichen Kandidaten wird automatisch erstellt. Die Datens\u00E4tze k\u00F6nnen anhand der Jahrbuch-Regeln validiert werden.
 
-chooseWorkspace_descYearbookWorkspace = Beschreibung Jahrbuch Bereich Deutsch.
+chooseWorkspace_descYearbookWorkspace = Erstellen und bearbeiten Sie das MPG-Jahrbuch f\u00FCr Ihr Institut. Eine Liste mit m\u00F6glichen Kandidaten wird automatisch erstellt. Die Datens\u00E4tze k\u00F6nnen anhand der Jahrbuch-Regeln validiert werden.
 
 chooseWorkspace_lnkQAWorkspace = QA Bereich
 
