--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1980,15 +1980,15 @@ all = Select all
 
 cancel = Cancel
 
-chooseWorkspace_descImportWorkspace = Description Import Workspace English.
+chooseWorkspace_descImportWorkspace = Here you can review and maintain your multiple imports into PubMan. The items included in each import can be deleted or released via batch operations.
 
-chooseWorkspace_descQAWorkspace = Description QA Workspace English.
+chooseWorkspace_descQAWorkspace = In this area, moderators can view and work on all of their institute\u0027s publications. You have the opportunity to modify items, to send them back to the depositor for rework or to release them. Publications in status \u0022pending\u0022 or \u0022discarded\u0022 are not available at this point.
 
-chooseWorkspace_descReportWorkspace = Description Report Workspace English.
+chooseWorkspace_descReportWorkspace = Here you can create annual publication reports for your institute. The lists can be exported in HTML or InDesign XML format.
 
-chooseWorkspace_descYearbookModeratorWorkspace = Description Yearbook Moderator Workspace English
+chooseWorkspace_descYearbookModeratorWorkspace = Create and edit the MPS yearbook for your institute. A list of possible candidates is created automatically. Datasets can be validated according to the specific yearbook rules of the MPS.
 
-chooseWorkspace_descYearbookWorkspace = Description Yearbook Workspace English.
+chooseWorkspace_descYearbookWorkspace = Create and edit the MPS yearbook for your institute. A list of possible candidates is created automatically. Datasets can be validated according to the specific yearbook rules of the MPS.
 
 chooseWorkspace_lnkQAWorkspace = QA Workspace
 
