--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -1921,15 +1921,15 @@ all = Seleccionaro todo
 
 cancel = Cancelar
 
-chooseWorkspace_descImportWorkspace = Description Import Workspace Spanish.
+chooseWorkspace_descImportWorkspace = [new] Here you can review and maintain your multiple imports into PubMan. The items included in each import can be deleted or released via batch operations.
 
-chooseWorkspace_descQAWorkspace = Description QA Workspace Spanish.
+chooseWorkspace_descQAWorkspace = [new] In this area, moderators can view and work on all of their institute's publications. You have the opportunity to modify items, to send them back to the depositor for rework or to release them. Publications in status "pending" or "discarded" are not available at this point.
 
-chooseWorkspace_descReportWorkspace = Description Report Workspace Spanish.
+chooseWorkspace_descReportWorkspace = [new] Here you can create annual publication reports for your institute. The lists can be exported in HTML or InDesign XML format.
 
-chooseWorkspace_descYearbookModeratorWorkspace = Description Yearbook Moderator Workspace Spanish
+chooseWorkspace_descYearbookModeratorWorkspace = [new] Create and edit the MPS yearbook for your institute. A list of possible candidates is created automatically. Datasets can be validated according to the specific yearbook rules of the MPS.
 
-chooseWorkspace_descYearbookWorkspace = Description Yearbook Workspace Spanish.
+chooseWorkspace_descYearbookWorkspace = [new] Create and edit the MPS yearbook for your institute. A list of possible candidates is created automatically. Datasets can be validated according to the specific yearbook rules of the MPS.
 
 chooseWorkspace_lnkQAWorkspace = QA Workspace
 
