--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1743,6 +1743,8 @@ actionMenu_lnkWithdraw = Verwerfen
 
 add = Hinzuf\u00FCgen
 
+adv_search_abb_fileComponentEmbargoDate = Embargo Datum
+
 adv_search_btAdd = Formular hinzuf\u00FCgen
 
 adv_search_btAll = Alle ausw\u00E4hlen
@@ -1800,18 +1802,27 @@ adv_search_lbHeaderSource = Quelle
 #Headers
 adv_search_lbHeaderWoP = Suchbegriffe
 
+#Roles
 #Genre (deprecated)
 adv_search_lblChkGenre = Genres
 
+adv_search_lblChkGenre_abb_article = Zeitschriftenart...
+
 adv_search_lblChkGenre_abb_casenote = Entscheidungs...
 
-adv_search_lblChkGenre_abb_contrcolled = Beitrag in Sammel... 
+adv_search_lblChkGenre_abb_conferencerep = Konferenzbericht
+
+adv_search_lblChkGenre_abb_contrcolled = Beitr. in Sammel... 
 
 adv_search_lblChkGenre_abb_contrcommentary = Beitrag in Komm...
 
 adv_search_lblChkGenre_abb_contrfestschrift = Beitrag in Fest...
 
+adv_search_lblChkGenre_abb_contrhandbook = Beitrag in Handb...
+
 adv_search_lblChkGenre_abb_contrlexikon = Beitrag in Lexikon 
+
+adv_search_lblChkGenre_abb_issue = Sonderheft
 
 adv_search_lblChkGenre_article = Zeitschriftenartikel
 
@@ -1889,6 +1900,12 @@ adv_search_lblChkRole = Rolle
 
 adv_search_lblChkType = Art der Datumsangabe
 
+adv_search_lblChkType_abb_event_end_date = Veranstalt.ende
+
+adv_search_lblChkType_abb_event_start_date = Veranstalt.beginn
+
+adv_search_lblChkType_abb_publishedpr = im Druck publ.
+
 adv_search_lblChkType_accepted = akzeptiert
 
 adv_search_lblChkType_created = erstellt
@@ -1924,6 +1941,8 @@ adv_search_lblRgbTopic = Stichw\u00F6rter
 
 #Person (deprecated)
 adv_search_lblSearchPerson = Person
+
+adv_search_lblSearchPerson_abb_honoree = geehrte Pers./Inst.
 
 adv_search_lblSearchPerson_advisor = Berater
 
@@ -2213,7 +2232,7 @@ event_end-date = Enddatum
 
 event_invitation-status = Eingeladen
 
-event_place = Veranstaltungsort
+event_place = Veranstalt.ort
 
 event_start-date = Beginndatum
 
@@ -2433,6 +2452,10 @@ mainMenu_lnkWorkspaces = ARBEITSBEREICHE
 
 mpipksDesc = MPI PKS Klassifikation
 
+mpis_groupsDesc = [NEW] MPIS Gruppen
+
+mpis_projectsDesc = [NEW] MPIS Projekte
+
 multipleImport_checkboxRollback = bei Fehlern zur\u00FCcksetzen
 
 multipleImport_checkboxSomething = multipleImport_checkboxSomething
@@ -2469,7 +2492,7 @@ openSearch_desc = Suche nach Publikationen in
 
 openSearch_shortDesc = eSciDoc PubMan
 
-organizationNumbers = Org.nr.
+organizationNumbers = OrgNr
 
 organization_name = Organisationsname und Adresse
 
