--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -332,7 +332,7 @@ ENUM_GENRE_COMMENTARY = Commentary
 
 ENUM_GENRE_CONFERENCE_PAPER = Conference Paper
 
-ENUM_GENRE_CONFERENCE_REPORT = Conference report
+ENUM_GENRE_CONFERENCE_REPORT = Conference Report
 
 # kind of Book, source Series, Mutli-Volume
 ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Contribution to a Collected Edition 
@@ -1743,6 +1743,8 @@ actionMenu_lnkWithdraw = Discard
 
 add = Add
 
+adv_search_abb_fileComponentEmbargoDate = has embargo date
+
 adv_search_btAdd = Add Form
 
 adv_search_btAll = Check all
@@ -1803,15 +1805,23 @@ adv_search_lbHeaderWoP = Search terms
 #Genre
 adv_search_lblChkGenre = Genres
 
+adv_search_lblChkGenre_abb_article = Journal Article
+
 adv_search_lblChkGenre_abb_casenote = Case Note
+
+adv_search_lblChkGenre_abb_conferencerep = Conference Rep...
 
 adv_search_lblChkGenre_abb_contrcolled = Contr. to Collect...
 
-adv_search_lblChkGenre_abb_contrcommentary = Contr. to Comment...
+adv_search_lblChkGenre_abb_contrcommentary = Contr. to Comm...
 
 adv_search_lblChkGenre_abb_contrfestschrift = Contr. to Fest...
 
+adv_search_lblChkGenre_abb_contrhandbook = Contr. to Handb...
+
 adv_search_lblChkGenre_abb_contrlexikon = Contr. to Encycl...
+
+adv_search_lblChkGenre_abb_issue = Spec. Journal Iss...
 
 adv_search_lblChkGenre_article = Journal Article
 
@@ -1833,15 +1843,15 @@ adv_search_lblChkGenre_conferencepap = Conference Paper
 
 adv_search_lblChkGenre_conferencerep = Conference Report
 
-adv_search_lblChkGenre_contrcolled = Contr. to Collected Edition 
+adv_search_lblChkGenre_contrcolled = Contribution to Collected Edition 
 
-adv_search_lblChkGenre_contrcommentary = Contr. to Commentary 
+adv_search_lblChkGenre_contrcommentary = Contribution to Commentary 
 
-adv_search_lblChkGenre_contrfestschrift = Contr. to Festschrift 
+adv_search_lblChkGenre_contrfestschrift = Contribution to Festschrift 
 
-adv_search_lblChkGenre_contrhandbook = Contr. to Handbook 
+adv_search_lblChkGenre_contrhandbook = Contribution to Handbook 
 
-adv_search_lblChkGenre_contrlexikon = Contr. to Encyclopedia 
+adv_search_lblChkGenre_contrlexikon = Contribution to Encyclopedia 
 
 adv_search_lblChkGenre_courseware = Teaching
 
@@ -1889,6 +1899,12 @@ adv_search_lblChkRole = Role
 
 adv_search_lblChkType = Type of Date
 
+adv_search_lblChkType_abb_event_end_date = end of event
+
+adv_search_lblChkType_abb_event_start_date = start of event
+
+adv_search_lblChkType_abb_publishedpr = published in print
+
 adv_search_lblChkType_accepted = accepted
 
 adv_search_lblChkType_created = created
@@ -1924,6 +1940,8 @@ adv_search_lblRgbTopic = Keywords
 
 #Person
 adv_search_lblSearchPerson = Person
+
+adv_search_lblSearchPerson_abb_honoree = Honoree
 
 adv_search_lblSearchPerson_advisor = Advisor
 
@@ -2436,6 +2454,10 @@ mainMenu_lnkWorkspaces = WORKSPACES
 
 mpipksDesc = MPI PKS Classification
 
+mpis_groupsDesc = [NEW] MPIS Groups
+
+mpis_projectsDesc = [NEW] MPIS Projects
+
 multipleImport_checkboxRollback = Undo on error
 
 multipleImport_checkboxSomething = multipleImport_checkboxSomething
@@ -2472,7 +2494,7 @@ openSearch_desc = Search for publications within
 
 openSearch_shortDesc = eSciDoc PubMan
 
-organizationNumbers = Org.nr.
+organizationNumbers = OrgNr
 
 organization_name = Organization Name and Address
 
