--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -1728,6 +1728,8 @@ actionMenu_lnkWithdraw = Retirar
 
 add = A\u00F1adir
 
+adv_search_abb_fileComponentEmbargoDate = tiene Embargo Fecha
+
 adv_search_btAdd = A\u00F1adir Formulario
 
 adv_search_btAll = revisar todo
@@ -1788,6 +1790,12 @@ adv_search_lbHeaderWoP = Palabra o Frase
 #Genre
 adv_search_lblChkGenre = G\u00E9neros
 
+adv_search_lblChkGenre_abb_article = Art\u00EDculo de Revista
+
+adv_search_lblChkGenre_abb_conferencerep = Informe de Conferencia
+
+adv_search_lblChkGenre_abb_issue = N\u00FAmero especial
+
 adv_search_lblChkGenre_article = Art\u00EDculo de Revista
 
 adv_search_lblChkGenre_book = Libro
@@ -1830,6 +1838,12 @@ adv_search_lblChkRole = Rol
 
 adv_search_lblChkType = Tipo de Fecha
 
+adv_search_lblChkType_abb_event_end_date = end of event
+
+adv_search_lblChkType_abb_event_start_date = start of event
+
+adv_search_lblChkType_abb_publishedpr = publicado impreso
+
 adv_search_lblChkType_accepted = aceptado
 
 adv_search_lblChkType_created = creado
@@ -1865,6 +1879,8 @@ adv_search_lblRgbTopic = Palabras clave
 
 #Person
 adv_search_lblSearchPerson = Persona
+
+adv_search_lblSearchPerson_abb_honoree = Homenajeado
 
 adv_search_lblSearchPerson_advisor = Asesor
 
@@ -2347,6 +2363,10 @@ mainMenu_lnkPolicy = Pol\u00EDtica y reclamaciones
 
 mainMenu_lnkWorkspaces = WORKSPACES
 
+mpis_groupsDesc = [NEW] MPIS Groups
+
+mpis_projectsDesc = [NEW] MPIS Projects
+
 multipleImport_checkboxRollback = Deshacer si da error
 
 multipleImport_checkboxSomething = multipleImport_checkboxSomething
@@ -2382,6 +2402,8 @@ ok = Ok
 openSearch_desc = Haga su b\u00FAsqueda de publicaciones aqu\u00ED Search for publications within
 
 openSearch_shortDesc = eSciDoc PubMan
+
+organizationNumbers = OrgNr
 
 organization_name = Nombre y Direcci\u00F3n de la Organizaci\u00F3n
 
