--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -129,6 +129,10 @@ IncorrectDDCClassification = Das eingegebene Stichwort entspricht nicht der DDC-
 
 IncorrectMPIPKSClassification = Das eingegebene Stichwort entspricht nicht der MPI PKS-Klassifizierung. 
 
+IncorrectMPISGroupsClassification = [NEW] Das eingegebene Stichwort entspricht nicht der MPIS-Gruppen-Klassifizierung. 
+
+IncorrectMPISProjectsClassification = Das eingegebene Stichwort entspricht nicht der MPIS-Projekt-Klassifizierung.
+
 LocatorIsNoUri = Die externe Referenz ist keine g\u00FCltige URL.
 
 #
