--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -132,6 +132,10 @@ IncorrectDDCClassification = The entered keyword does not conform to the DDC cla
 
 IncorrectMPIPKSClassification = The entered keyword does not conform to the MPI PKS classification. 
 
+IncorrectMPISGroupsClassification = [NEW] The entered keyword does not conform to the MPIS group classification. 
+
+IncorrectMPISProjectsClassification = [NEW] The entered keyword does not conform to the MPIS project classification.
+
 LocatorIsNoUri = The external reference is no valid URL.
 
 #
