--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -112,6 +112,10 @@ GenreNotSuitable = El g\u00E9nero seleccionado no est\u00E1 permitido en la actu
 
 ImportNameNotProvided = NEW: Please enter a name for the import
 
+IncorrectMPISGroupsClassification = [NEW] The entered keyword does not conform to the MPIS group classification. 
+
+IncorrectMPISProjectsClassification = [NEW] The entered keyword does not conform to the MPIS project classification.
+
 LocatorIsNoUri = La referencia externa no es una URL v\u00E1lida.
 
 #
