--- a/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
@@ -1459,15 +1459,15 @@ adv_search_lblChkGenre_conferencepap = Conference Paper
 
 adv_search_lblChkGenre_conferencerep = Conference Report
 
-adv_search_lblChkGenre_contrcolled = Contr. to Collected Edition 
+adv_search_lblChkGenre_contrcolled = Contribution to Collected Edition
 
-adv_search_lblChkGenre_contrcommentary = Contr. to Commentary 
+adv_search_lblChkGenre_contrcommentary = Contribution to Commentary
 
-adv_search_lblChkGenre_contrfestschrift = Contr. to Festschrift 
+adv_search_lblChkGenre_contrfestschrift = Contribution to Festschrift
 
-adv_search_lblChkGenre_contrhandbook = Contr. to Handbook 
+adv_search_lblChkGenre_contrhandbook = Contribution to Handbook
 
-adv_search_lblChkGenre_contrlexikon = Contr. to Encyclopedia 
+adv_search_lblChkGenre_contrlexikon = Contribution to Encyclopedia
 
 adv_search_lblChkGenre_courseware = Teaching
 
