--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1717,6 +1717,8 @@ actionMenu_lnkWithdraw = \u53D6\u308A\u4E0B\u3052
 
 add = \u8FFD\u52A0
 
+adv_search_abb_fileComponentEmbargoDate = \u516C\u958B\u7336\u4E88\u671F\u9650\u4ED8\u304D
+
 adv_search_btAdd = \u691C\u7D22\u6761\u4EF6\u3092\u8FFD\u52A0
 
 adv_search_btAll = \u3059\u3079\u3066\u9078\u629E
@@ -1777,7 +1779,11 @@ adv_search_lbHeaderWoP = \u691C\u7D22\u8A9E\u53E5
 #Genre
 adv_search_lblChkGenre = \u8CC7\u6599\u7A2E\u5225
 
+adv_search_lblChkGenre_abb_article = \u5B66\u8853\u8AD6\u6587
+
 adv_search_lblChkGenre_abb_casenote = \u5224\u4F8B\u6CE8\u91C8
+
+adv_search_lblChkGenre_abb_conferencerep = \u4F1A\u8B70\u5831\u544A
 
 adv_search_lblChkGenre_abb_contrcolled = \u8AD6\u6587\u96C6\u3078\u306E\u5BC4\u7A3F
 
@@ -1785,7 +1791,11 @@ adv_search_lblChkGenre_abb_contrcommentary = \u6CD5\u4EE4\u89E3\u8AAC\u3078\u306
 
 adv_search_lblChkGenre_abb_contrfestschrift = \u8A18\u5FF5\u8AD6\u6587\u96C6\u3078\u306E\u5BC4\u7A3F
 
+adv_search_lblChkGenre_abb_contrhandbook = \u30CF\u30F3\u30C9\u30D6\u30C3\u30AF\u3078\u306E\u5BC4\u7A3F 
+
 adv_search_lblChkGenre_abb_contrlexikon = \u767E\u79D1\u4E8B\u5178\u3078\u306E\u5BC4\u7A3F
+
+adv_search_lblChkGenre_abb_issue = \u7279\u96C6\u53F7
 
 adv_search_lblChkGenre_article = \u5B66\u8853\u8AD6\u6587
 
@@ -1863,6 +1873,12 @@ adv_search_lblChkRole = \u5F79\u5272
 
 adv_search_lblChkType = \u65E5\u4ED8\u7A2E\u5225
 
+adv_search_lblChkType_abb_event_end_date = \u30A4\u30D9\u30F3\u30C8\u7D42\u4E86\u65E5
+
+adv_search_lblChkType_abb_event_start_date = \u30A4\u30D9\u30F3\u30C8\u958B\u59CB\u65E5
+
+adv_search_lblChkType_abb_publishedpr = \u7D19\u7248\u51FA\u7248\u65E5
+
 adv_search_lblChkType_accepted = \u53D7\u7406\u65E5
 
 adv_search_lblChkType_created = \u539F\u7A3F\u4F5C\u6210\u65E5
@@ -1898,6 +1914,8 @@ adv_search_lblRgbTopic = \u30AD\u30FC\u30EF\u30FC\u30C9
 
 #Person
 adv_search_lblSearchPerson = \u6C0F\u540D
+
+adv_search_lblSearchPerson_abb_honoree = \u5BC4\u8D08\u8005
 
 adv_search_lblSearchPerson_advisor = \u5B66\u4F4D\u8AD6\u6587\u4E3B\u67FB
 
@@ -2397,6 +2415,10 @@ mainMenu_lnkPolicy = \u30DD\u30EA\u30B7\u30FC/\u514D\u8CAC\u4E8B\u9805
 mainMenu_lnkWorkspaces = \u7BA1\u7406\u753B\u9762 
 
 mpipksDesc = MPI PKS\u5206\u985E\u8868 (MPI PKS Classification)
+
+mpis_groupsDesc = [NEW] MPIS Groups
+
+mpis_projectsDesc = [NEW] MPIS Projects
 
 multipleImport_checkboxRollback = \u30A8\u30E9\u30FC\u6642\u306B\u51E6\u7406\u3092\u5DEE\u3057\u623B\u3059
 
