--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -132,6 +132,10 @@ IncorrectDDCClassification = \u30C7\u30E5\u30FC\u30A4\u5341\u9032\u5206\u985E\uF
 
 IncorrectMPIPKSClassification = \u30C7\u30E5\u30FC\u30A4\u5341\u9032\u5206\u985E\uFF08DDC\uFF09\u306B\u5B58\u5728\u3057\u306A\u3044\u30AD\u30FC\u30EF\u30FC\u30C9\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u3059\u3002
 
+IncorrectMPISGroupsClassification = [NEW] The entered keyword does not conform to the MPIS group classification. 
+
+IncorrectMPISProjectsClassification = [NEW] The entered keyword does not conform to the MPIS project classification.
+
 LocatorIsNoUri = \u6307\u5B9A\u3057\u305F\u5916\u90E8URL\u306E\u6B63\u3057\u3044\u5F62\u5F0F\u3068\u306A\u3063\u3066\u3044\u307E\u305B\u3093\u3002
 
 #
@@ -302,7 +306,7 @@ basket_SingleAlreadyInBasket = \u3053\u306E\u30A2\u30A4\u30C6\u30E0\u306F\u3059\
 
 basket_SingleRemovedSuccessfully = The item was removed from the basket.
 
-chooseWorkspace = \u30a2\u30a4\u30c6\u30e0\u7ba1\u7406\u753b\u9762\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+chooseWorkspace = \u30A2\u30A4\u30C6\u30E0\u7BA1\u7406\u753B\u9762\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
 copyright = \u00A9 2007 Max Planck Society
 
@@ -617,9 +621,9 @@ localeJA = \u65E5\u672C\u8A9E
 
 mandatoryField = \u5FC5\u9808\u9805\u76EE
 
-mandatoryFieldFS1 = \u30c1\u30a7\u30c3\u30af:
+mandatoryFieldFS1 = \u30C1\u30A7\u30C3\u30AF:
 
-mandatoryFieldFS2 = \u8ffd\u52a0\u5fc5\u9808\u9805\u76ee
+mandatoryFieldFS2 = \u8FFD\u52A0\u5FC5\u9808\u9805\u76EE
 
 multipleImport_description = multipleImport_description
 
