--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -2001,7 +2001,7 @@ cancel = Abbrechen
 
 chooseWorkspace_descImportWorkspace = Hier gelangen Sie zu einer Liste Ihrer get\u00E4tigten Massenimporte, die Sie im Detail pr\u00FCfen und verwalten k\u00F6nnen. Die Datens\u00E4tze k\u00F6nnen f\u00FCr jeden Import blockweise freigegeben oder gel\u00F6scht werden.
 
-chooseWorkspace_descQAWorkspace = Moderatoren k\u00F6nnen hier alle Publikationen ihres Instituts sichten und bearbeiten. Es ist m\u00F6glich, die Datens\u00E4tze selbst zu bearbeiten, dem jeweiligen Inhaber zur \u00DCberarbeitung zur\u00FCckzuschicken, oder freizugeben. Publikationen im Status \u0022schwebend\u0022, und \u0022verworfen\u0022 werden hier nicht angezeigt.
+chooseWorkspace_descQAWorkspace = Moderatoren k\u00F6nnen hier alle Publikationen ihres Instituts sichten und bearbeiten. Es ist m\u00F6glich, die Datens\u00E4tze selbst zu bearbeiten, dem jeweiligen Inhaber zur \u00DCberarbeitung zur\u00FCckzuschicken, oder freizugeben. Publikationen im Status "schwebend", und "verworfen" werden hier nicht angezeigt.
 
 chooseWorkspace_descReportWorkspace = Mit Hilfe dieser Maske k\u00F6nnen T\u00E4tigkeitsberichte \u00FCber Jahreszeitr\u00E4ume erstellt und exportiert werden. Als Formate stehen HTML und InDesign XML zur Verf\u00FCgung.
 
@@ -2605,6 +2605,8 @@ styleTheme_lblHighContrast = kontrastreich
 
 #STYLE THEMES
 styleTheme_lblPubMan = PubMan
+
+styleTheme_lblSpecial = Spezial
 
 submission_descEasySubmission = \u00DCber die einfache Eingabe k\u00F6nnen Sie schrittweise Ihren Datensatz beschreiben. Am Ende der Eingabe haben Sie die M\u00F6glichkeit entweder den Datensatz abzuspeichern oder in die ausf\u00FChrliche Eingabemaske zu wechseln um weitere Angaben zu machen.
 
