--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -2000,7 +2000,7 @@ cancel = Cancel
 
 chooseWorkspace_descImportWorkspace = Here you can review and maintain your multiple imports into PubMan. The items included in each import can be deleted or released via batch operations.
 
-chooseWorkspace_descQAWorkspace = In this area, moderators can view and work on all of their institute\u0027s publications. You have the opportunity to modify items, to send them back to the depositor for rework or to release them. Publications in status \u0022pending\u0022 or \u0022discarded\u0022 are not available at this point.
+chooseWorkspace_descQAWorkspace = In this area, moderators can view and work on all of their institute's publications. You have the opportunity to modify items, to send them back to the depositor for rework or to release them. Publications in status "pending" or "discarded" are not available at this point.
 
 chooseWorkspace_descReportWorkspace = Here you can create annual publication reports for your institute. The lists can be exported in HTML or InDesign XML format.
 
@@ -2607,6 +2607,8 @@ styleTheme_lblHighContrast = high contrast
 
 #STYLE THEMES
 styleTheme_lblPubMan = PubMan
+
+styleTheme_lblSpecial = Special
 
 submission_descEasySubmission = Using the easy submission one can enter stepwise information on a publication. At the end of the wizard one can save the item or switch to the full submission mask to add more details.
 
