--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -2503,6 +2503,8 @@ styleTheme_lblHighContrast = contraste alto
 #STYLE THEMES
 styleTheme_lblPubMan = PubMan
 
+styleTheme_lblSpecial = Special
+
 submission_descEasySubmission = Usando el m\u00E9todo de env\u00EDo f\u00E1cil se puede a\u00F1adir informaci\u00F3n sobre una publicaci\u00F3n de forma escalonada. Al final del asistente se puede guardar el item o cambiar a la pantalla de env\u00EDo completo y a\u00F1adir m\u00E1s detalles.
 
 submission_descImport = Esta funcionalidad le permite importar un fichero BibTeX con una referencia BibTeX, o traer metadatos y texto completo(s)de otros sistemas como arXiv o PubMed Central.
