--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -2570,6 +2570,8 @@ styleTheme_lblHighContrast = \u30B3\u30F3\u30C8\u30E9\u30B9\u30C8
 #STYLE THEMES
 styleTheme_lblPubMan = \u30D6\u30EB\u30FC
 
+styleTheme_lblSpecial = Special
+
 submission_descEasySubmission = \u30B9\u30C6\u30C3\u30D7\u30D0\u30A4\u30B9\u30C6\u30C3\u30D7\u3067\u30A2\u30A4\u30C6\u30E0\u3092\u767B\u9332\u3057\u3066\u3044\u304F\u3053\u3068\u304C\u3067\u304D\u307E\u3059\u3002\u306F\u3058\u3081\u306E\u3046\u3061\u306F\u3053\u3061\u3089\u3092\u4F7F\u3046\u3053\u3068\u3092\u63A8\u5968\u3057\u307E\u3059\u3002
 
 submission_descImport = \u3059\u3067\u306B\u66F8\u8A8C\u9805\u76EE\u30C7\u30FC\u30BF\u3092BibTeX\u5F62\u5F0F\u306A\u3069\u3067\u3082\u3063\u3066\u3044\u308B\u304B\u3001ArXiv\u306A\u3069\u306E\u5916\u90E8API\u5BFE\u5FDC\u306E\u30A8\u30F3\u30B8\u30F3\u3092\u6301\u3063\u3066\u3044\u308B\u5834\u5408\u306F\u3053\u3061\u3089\u3092\u304A\u4F7F\u3044\u304F\u3060\u3055\u3044\u3002
