--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -446,6 +446,8 @@ ENUM_IMPORT_FORMAT_ENDNOTEICE = EndNote ICE
 
 ENUM_IMPORT_FORMAT_ESCIDOC = eSciDoc
 
+ENUM_IMPORT_FORMAT_ZFN = ZfN
+
 ENUM_IMPORT_FORMAT_MAB = MAB
 
 ENUM_IMPORT_FORMAT_RIS = RIS
