--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -584,7 +584,7 @@ import_process_transformation_done = Die Transformation ist abgeschlossen
 
 import_process_validate = Validierung des Datensatzes
 
-itemHasBeenChangedInTheMeantime = Der Datensatz, den Sie speichern, einstellen oder freischalten m\u00F6chten wurde ge\u00E4ndert von einer anderen Person bereits ge\u00E4ndert. Bitte \u00F6ffnen Sie den Datensatz, den Sie \u00E4ndern m\u00F6chten in einem neuen Fester/Tab und f\u00FCgen die \u00C4nderungen dort ein, indem Sie sie von dem aktuellen Bildschirm kopieren.
+itemHasBeenChangedInTheMeantime = Ein unerwarteter Fehler ist aufgetreten. Bitte wenden Sie sich an den PubMan Support.
 
 # EditItem
 itemHasNotBeenChanged = Der Datensatz wurde nicht ge\u00E4ndert und somit auch nicht erneut abgespeichert.
