--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -593,7 +593,7 @@ import_process_transformation_done = Transformation done
 
 import_process_validate = Validating item
 
-itemHasBeenChangedInTheMeantime = The item you want to save, submit or release, has been changed while you where working on it. Therefore your changes can't be saved. Please open the item you would like to change in another window/tab and copy the changes you have made into the latest version of your item.
+itemHasBeenChangedInTheMeantime = An unexpected error occurred. Please contact PubMan Support.
 
 # EditItem
 itemHasNotBeenChanged = The Item was not changed and therefore not saved once again.
